--- a/Pages/Cliente/Cliente.razor
+++ b/Pages/Cliente/Cliente.razor
@@ -162,7 +162,7 @@
                                 <td>@Row.Correo</td>
                                 <td class="d-print-none">
                                     <button @onclick="()=>Seleccionar(Row.Id)"
-                                        class="btn btn-outline-warning">
+                                        class="btn btn-outline-primary">
                                         <span class="oi oi-pencil"></span>
                                     </button>
                                     <button @onclick="()=>Eliminar(Row)"
