--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -145,7 +145,7 @@
                                 <td>@proveedorRow.Direccion</td>
                                 <td class="d-print-none">
                                     <button @onclick="()=>Seleccionar(proveedorRow.Id)"
-                                        class="btn btn-outline-warning">
+                                        class="btn btn-outline-primary">
                                         <span class="oi oi-pencil"></span>
                                     </button>
                                     <button @onclick="()=>Eliminar(proveedorRow)"
