--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -55,7 +55,7 @@
         @*Disenar los elementos que se cargan a la factura*@
         <h5 class="mt-1"><b>Detalle de la factura N°:</b> @facturaRequest.Id</h5>
         <table class="table table-hover">
-            <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
+            <thead class="bg-black text-white">
                 <tr>
                     <th class="col w-25">
                         Cantidad
@@ -72,18 +72,18 @@
                 {
                     <tr>
                         <td class="col w-25 text-center">
-                            @detalle.Cantidad
+                            <InputNumber 
+                                class="form-control d-print-none" 
+                                @bind-Value="@detalle.Cantidad" />
+                            <div class="d-none d-print-block">
+                                @detalle.Cantidad
+                            </div>
                         </td>
                         <td class="col w-25">
                             @detalle.Descripcion
                         </td>
                         <td class="col w-25">
-                            $@($"{(detalle.Precio - detalle.PrecioITBIS):N2}")
-                        </td>
-                        <td>
-                            <span style="white-space: nowrap;">
-                                $@($"{(detalle.PrecioITBIS):N2}")
-                            </span>
+                            $@($"{(detalle.Precio):N2}")
                         </td>
                         <td class="col w-25">
                             <span style="white-space: nowrap;">
@@ -92,7 +92,7 @@
                         </td>
 
                         <td class="col text-center">
-                            $@detalle.SubTotal.ToString("N2")
+                            $@($"{(detalle.SubTotal - detalle.TotalDesc):N2}")
                         </td>
                     </tr>
                 }
@@ -423,7 +423,7 @@ else
                                                         </button>
                                                     
                                                     }
-                                                    <button @onclick="()=>Seleccionar(f.Id, f)" class="btn btn-outline-info">
+                                                    <button @onclick="()=>Seleccionar(f.Id, f)" class="btn btn-outline-primary">
                                                         <span class="oi oi-info"></span>
                                                     </button>
                                                     <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none" >
