--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -45,7 +45,7 @@
                 </div>
                 <div class="nav-item px-3">
                     <div class="dropdown">
-                        <NavLink class="nav-link" @onclick="ToggleDropdown" title="Opción desplegable">
+                        <NavLink class="nav-link" @onclick="ToggleDropdown" title="Opción desplegable" style="cursor: pointer;">
                             <span class="@DropdownIconClass" aria-hidden="true"></span>
                             <strong>Factura</strong>
                         </NavLink>
@@ -80,7 +80,7 @@
     <div class="mt-auto">
         <!-- Opción Log Out aquí -->
         <div class="nav-item px-3">
-            <NavLink class="nav-link btn-lg" @onclick="Logout">
+            <NavLink class="nav-link btn-lg" @onclick="Logout" style="cursor: pointer;">
                 <span class="oi oi-account-logout" aria-hidden="true"></span> Log Out
             </NavLink>
         </div>
