--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -60,8 +60,9 @@
     </ul>
     <h2><strong>Información de Contacto:</strong></h2>
     <ul>
-        <li>Número de Contacto: +1 (829) 870-7794</li>
-        <li>Correo Electrónico: vargasmarcos646@gmail.com</li>
+        <li><strong>Número de Contacto:</strong> +1 (829) 870-7794</li>
+        <li><strong>Correo Electrónico:</strong> vargasmarcos646@gmail.com</li>
+        <li><strong>Sitio Web:</strong> <a href="https://marcosdvs.github.io/Developer/" target="_blank">HorseMan_Developer.com</a></li>
     </ul>
     <h2><strong>Créditos y Agradecimientos:</strong></h2>
     <p>
