--- a/Pages/Cliente/Cliente.razor
+++ b/Pages/Cliente/Cliente.razor
@@ -93,9 +93,9 @@
                         </div>
                         <div class="form-group input-group mb-3">
                             <span class="input-group-text bg-white text-black">
-                                <span class="oi oi-dollar"></span>
+                                <span class="oi oi-envelope-closed"></span>
                             </span>
-                            <input type="email" class="form-control" placeholder="Limite de credito" 
+                            <input type="email" class="form-control" placeholder="Correo" 
                             @bind-value="request.Correo"/>
                         </div>
                     </div>
