--- a/Pages/Usuario/Usuario.razor
+++ b/Pages/Usuario/Usuario.razor
@@ -72,7 +72,7 @@
                         <label for="role" class="fw-bold">Role</label>
                         <select class="form-select" required @bind="@request.Role">
                             <option disabled selected>Seleccione un role</option>
-                            <option value="Administrator">Administrator</option>
+                            <option value="Admin">Admin</option>
                             <option value="User">User</option>
                         </select>
                     </div>
